FIX: Bug carregamento pokemons IntersectionObserver

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                 </div>
 
-                <div id="div-fim-pagina" style="position:fixed; bottom:0">
+                <div id="div-fim-pagina" style="height:100px;">
 
                 </div>
 
